@@ -28,6 +28,48 @@ def gdal_version():
     return info_b.decode("utf-8")
 
 
+def _epsg_treats_as_latlong(input_crs):
+    """Test if the CRS is in latlon order
+
+    Parameters
+    ----------
+    input_crs : _CRS
+        rasterio _CRS object
+
+    Returns
+    -------
+    bool
+
+    """
+    cdef _CRS crs = input_crs
+
+    try:
+        return bool(OSREPSGTreatsAsLatLong(crs._osr) == 1)
+    except CPLE_BaseError as exc:
+        raise CRSError("{}".format(exc))
+
+
+def _epsg_treats_as_northingeasting(input_crs):
+    """Test if the CRS should be treated as having northing/easting coordinate ordering
+
+    Parameters
+    ----------
+    input_crs : _CRS
+        rasterio _CRS object
+
+    Returns
+    -------
+    bool
+
+    """
+    cdef _CRS crs = input_crs
+
+    try:
+        return bool(OSREPSGTreatsAsNorthingEasting(crs._osr) == 1)
+    except CPLE_BaseError as exc:
+        raise CRSError("{}".format(exc))
+
+
 cdef class _CRS(object):
     """Cython extension class"""
 
