@@ -13,7 +13,7 @@ used.
 import json
 import pickle
 
-from rasterio._crs import _CRS, all_proj_keys
+from rasterio._crs import _CRS, all_proj_keys, _epsg_treats_as_latlong, _epsg_treats_as_northingeasting
 from rasterio.compat import Mapping, string_types
 from rasterio.errors import CRSError
 
@@ -496,3 +496,80 @@ class CRS(Mapping):
             return cls.from_string(value, morph_from_esri_dialect=morph_from_esri_dialect)
         else:
             raise CRSError("CRS is invalid: {!r}".format(value))
+
+
+def epsg_treats_as_latlong(input):
+    """Test if the CRS is in latlon order
+
+    From GDAL docs:
+
+    > This method returns TRUE if EPSG feels this geographic coordinate
+    system should be treated as having lat/long coordinate ordering.
+
+    > Currently this returns TRUE for all geographic coordinate systems with
+    an EPSG code set, and axes set defining it as lat, long.
+
+    > FALSE will be returned for all coordinate systems that are not
+    geographic, or that do not have an EPSG code set.
+
+    > **Note**
+
+    > Important change of behavior since GDAL 3.0.
+    In previous versions, geographic CRS imported with importFromEPSG()
+    would cause this method to return FALSE on them, whereas now it returns
+    TRUE, since importFromEPSG() is now equivalent to importFromEPSGA().
+
+    Parameters
+    ----------
+    input : CRS
+        Coordinate reference system, as a rasterio CRS object
+        Example: CRS({'init': 'EPSG:4326'})
+
+    Returns
+    -------
+    bool
+
+    """
+    if not isinstance(input, CRS):
+        input = CRS.from_user_input(input)
+
+    return _epsg_treats_as_latlong(input._crs)
+
+
+def epsg_treats_as_northingeasting(input):
+    """Test if the CRS should be treated as having northing/easting coordinate ordering
+
+    From GDAL docs:
+
+    > This method returns TRUE if EPSG feels this projected coordinate
+    system should be treated as having northing/easting coordinate ordering.
+
+    > Currently this returns TRUE for all projected coordinate systems with
+    an EPSG code set, and axes set defining it as northing, easting.
+
+    > FALSE will be returned for all coordinate systems that are not
+    projected, or that do not have an EPSG code set.
+
+    > **Note**
+
+    > Important change of behavior since GDAL 3.0.
+    In previous versions, projected CRS with northing, easting axis order
+    imported with importFromEPSG() would cause this method to return FALSE
+    on them, whereas now it returns TRUE, since importFromEPSG() is now 
+    equivalent to importFromEPSGA().
+
+    Parameters
+    ----------
+    input : CRS
+        Coordinate reference system, as a rasterio CRS object
+        Example: CRS({'init': 'EPSG:4326'})
+
+    Returns
+    -------
+    bool
+
+    """
+    if not isinstance(input, CRS):
+        input = CRS.from_user_input(input)
+
+    return _epsg_treats_as_northingeasting(input._crs)
